--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
     "react-scroll": "^1.9.3",
+    "swiper": "^11.2.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9"
   },
